fixed about spacing/fonts

--- a/wp-content/themes/html5blank-stable/about.css
+++ b/wp-content/themes/html5blank-stable/about.css
@@ -1,8 +1,8 @@
 html, body{
     margin: 0 auto;
     padding: 0;
-    width: 100%;
-    height: 918px;
+    /*width: 100%;*/
+    height: 100%;
     font-size: 62.5%;
     font-family:"lato",sans-serif;
     box-sizing: border-box;
@@ -15,6 +15,7 @@ body{
     height: 100%;
     background-color: #7a1501;
     font-size: 1.6rem;
+    line-height: 1.42857143;
     
 }
 
@@ -196,6 +197,10 @@ color: #7a1501;
     justify-content: flex-end;
     align-items: flex-end;
     text-align: right;
+    font-family: "franchise";
+    font-weight: bold;
+    font-size:2rem;
+    line-height:1.5;
 }
 
 main{
@@ -236,9 +241,17 @@ main{
     padding-left: 35px;
     line-height: 2;
     font-family:"lato",sans-serif;
-    font-size: 1rem;
+    font-size: 1.4rem;
 
 }
+
+#about > h1{
+    font-weight: bold;
+    text-transform: uppercase;
+    font-family: "franchise";
+    font-size: 2.2rem;
+}
+
 .signup_section_bottom_page{
     /*width:100%;*/
     /*height: 30px;*/
